--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Manrope:wght@200..800&family=Montez&display=swap"
       rel="stylesheet"
     />
+      <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
     <!--==============================
 	    All CSS File
