--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/smz.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicons - Place favicon.ico in the root directory -->
-    <link
+    <!-- <link
       rel="apple-touch-icon"
       sizes="57x57"
       href="/assets/img/favicons/apple-icon-57x57.png"
@@ -75,7 +75,7 @@
       sizes="16x16"
       href="/assets/img/favicons/favicon-16x16.png"
     />
-    <link rel="manifest" href="/assets/img/favicons/manifest.json" />
+    <link rel="manifest" href="/assets/img/favicons/manifest.json" /> -->
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta
       name="msapplication-TileImage"
@@ -94,7 +94,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Manrope:wght@200..800&family=Montez&display=swap"
       rel="stylesheet"
     />
-      <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap"
+      rel="stylesheet"
+    />
 
     <!--==============================
 	    All CSS File
